--- a/README.rdoc
+++ b/README.rdoc
@@ -8,9 +8,44 @@ class Google
   include RESTMapper
   base_url 'www.google.nl'
   
-  get :search,"/?q=:query"  
-  
+  get :search,"/search?q=:query"  
 end
 </code>
 
-puts Google.search("qwfghdf")
+puts Google.search(:query => "qwfghdf")
+
+We can also specify a block:
+<code>
+  get :search,"/search?q=:query" do |result|
+    parse_method result
+  end
+</code>
+
+Unlimited parameters
+<code>
+  get :search,"/search?q=:query&hl=:country" do |result|
+    parse_method result
+  end
+
+puts Google.search(:query => "Ruby",:country => 'en')  
+</code>
+
+You can also specify defaults:
+<code>
+  get :search,"/search?q=:query&hl=:country",:country=> 'en' do |result|
+    parse_method result
+  end
+
+puts Google.search(:query => "Ruby")  
+</code>
+
+
+
+Please understand that this is still a work in progress.
+Post, Update en Delete will be added in time. If you cannot wait, just fork and add it yourself.
+
+
+
+
+
+
